<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">X Service Seeker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="user_email">Email</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="sex">Sex</string>
    <string name="phno">Ph.No</string>
    <string name="history">History</string>
    <string name="update">Update</string>
    <string name="mobile">Mobile</string>
    <string name="dob">Date of birth</string>
    <string name="empty_name">Name cannot be empty</string>
    <string name="empty_email">Invalid Email</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="empty_dob">Date of Birth cannot be empty</string>
    <string name="empty_mobile">Mobile cannot be empty</string>
    <string name="pick_me_up">Pick Me Up</string>
    <string name="account">Account</string>
    <string name="locate_me">Locate Me</string>
    <string name="settings">Settings</string>
    <string name="i_am_here">I am here.</string>
    <string name="X_Service_Provider_here">X Service Provider.</string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed to the user</string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>
    <string name="eta">ETA</string>
    <string name="call_operator">Call Operator</string>
    <string name="thank_you">THANK \nYOU</string>
    <string name="feedback">Feedback</string>
    <string name="comments">Comments...</string>
    <string name="rate_service">Rate Service</string>
    <string name="client_request_failed">We were unable to process your request, Please try again.</string>
    <string name="client_request_success">Request received, Notifying the nearest X X Service Providers.</string>
    <string name="waiting_for_location">Waiting for location.</string>
    <string name="gps_enabled">Location is disabled in your device. Please enable it to continue using the app.</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="no_connectivity">No Connectivity</string>
    <string name="internet_enabled">Enable your Wifi/3G connectivity to move forward ...</string>
    <string name="enable_wifi">Enable Wifi</string>
    <string name="enable_3G">Enable 3G</string>
    <string name="waiting_for_x_Service_Provider">Waiting for X Service Provider to respond</string>
    <string name="rate_success">Thank You for your feedbacks</string>
    <string name="rate_failed">Unable to publish feedback, Please try again</string>
    <string name="x_Service_Provider_responded">A X Service Provider is assigned to your request, Click here for ETA.</string>
    <string name="job_finished">Your job is completed, Please rate our service.</string>
    <string name="timer_over">Your X Service Provider should reach by now, Please call operator in case of any queries</string>
    <string name="text_ref">Ref</string>
    <string name="text_pickuptime">Recover</string>
    <string name="text_client">X Service Seeker</string>
    <string name="text_x_Service_Provider">X Service Provider</string>
    <string name="text_very_unsatisfied">Very Unsatisfied</string>
    <string name="text_unsatisfied">Unsatisfied</string>
    <string name="text_neutral">Neutral</string>
    <string name="text_satisfied">Satisfied</string>
    <string name="text_very_satisfied">Very Satisfied</string>
    <string name="text_myaccount">My Account</string>
    <string name="text_history_detail">History Details</string>
    <string name="text_history">History</string>
    <string name="text_thankyou">Thank You</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_about">About us</string>
    <string name="text_amount">Amount</string>
    <string name="text_gotodetail">Go To Detail</string>
    <string name="text_map">Maps</string>
    <string name="text_mapview">Map View</string>
    <string name="text_details">Details</string>
    <string name="text_detailview">Detail View</string>
    <string name="call_x_Service_Provider">Call X Service Provider</string>
    <string name="x_Service_Provider_reached">X Service Provider Arrived</string>
    <string name="x_Service_Provider_reached_desc">Your job has been started</string>

</resources>