<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_fields_gap"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/tvName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/blue"
            android:textSize="@dimen/body_font" />

        <EditText
            android:id="@+id/etName"
            style="@style/edittext_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/blue"
            android:textSize="@dimen/body_font" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/age"
            android:textColor="@color/blue"
            android:textSize="@dimen/body_font" />

        <EditText
            android:id="@+id/etAge"
            style="@style/edittext_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:textColor="@color/blue"
            android:textSize="@dimen/body_font" >
        </EditText>

        <TextView
            android:id="@+id/tvSex"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sex"
            android:textColor="@color/blue"
            android:textSize="@dimen/body_font" />

        <Button
            android:id="@+id/btnSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:textColor="@android:color/white"
            android:textOff=""
            android:textOn=""
            android:textSize="@dimen/body_font" >
        </Button>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/user_email"
            android:textColor="@color/blue"
            android:textSize="@dimen/body_font" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/edittext_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:textColor="@color/blue"
            android:textSize="@dimen/body_font" >
        </EditText>

        <TextView
            android:id="@+id/tvPhNo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/phno"
            android:textColor="@color/blue"
            android:textSize="@dimen/body_font" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_country_code"
                style="@style/button_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.3"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/etPhNo"
                style="@style/edittext_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:textColor="@color/blue"
                android:textSize="@dimen/body_font" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_fields_gap" >

            <Button
                android:id="@+id/btnHistory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/history"
                android:textColor="@android:color/white"
                android:textSize="@dimen/body_font" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/update"
                android:textColor="@android:color/white"
                android:textSize="@dimen/body_font" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_fields_gap"
            android:layout_marginTop="@dimen/margin_fields_gap"
            android:background="@drawable/button_background"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="@dimen/body_font" />
    </LinearLayout>

</ScrollView>