<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="5dp" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_fields_gap"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/blue"
                android:textSize="@dimen/body_font" />

            <EditText
                android:id="@+id/et_register_name"
                style="@style/edittext_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/blue" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sex"
                android:textColor="@color/blue"
                android:textSize="@dimen/body_font" />

            <ToggleButton
                android:id="@+id/tb_register_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_sex_background"
                android:checked="true"
                android:textOff=""
                android:textOn="" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/user_email"
                android:textColor="@color/blue"
                android:textSize="@dimen/body_font" />

            <EditText
                android:id="@+id/et_register_email"
                style="@style/edittext_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/password"
                android:textColor="@color/blue"
                android:textSize="@dimen/body_font" />

            <EditText
                android:id="@+id/et_register_password"
                style="@style/edittext_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/mobile"
                android:textColor="@color/blue"
                android:textSize="@dimen/body_font" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn_register_country_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    style="@style/button_style"
                    android:layout_weight="0.3"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/et_register_contact"
                    style="@style/edittext_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:textColor="@color/blue" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/dob"
                android:textColor="@color/blue"
                android:textSize="@dimen/body_font" />

            <EditText
                android:id="@+id/et_register_dob"
                style="@style/edittext_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:editable="false"
                android:textColor="@color/blue" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_register_submit"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register" />

</LinearLayout>